--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -21,4 +21,4 @@ RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tt
 	&& sed -i 's/demo\.launch(share=True)/demo.launch(server_name="0.0.0.0", server_port=8080)/' gradio_gui.py
 
 EXPOSE 8080
-CMD ["/app/gradio_gui.py"]
+CMD ["python", "gradio_gui.py"]
