--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -10,15 +10,13 @@ RUN printf 'APT::Install-Recommends "0";\nAPT::Install-Suggests "0";\nAPT::Acqui
 RUN curl -sSL https://github.com/DrewThomasson/ebook2audiobookpiper-tts/raw/8284918b7ae5d563f0c4d5b42abd0f6402190156/requirements.txt | grep -Ev 'nvidia|triton' | pip install --no-cache-dir -r /dev/stdin \
 	&& python -m spacy download en_core_web_sm
 
-RUN mkdir /app \
+WORKDIR /app
+RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tts.git . \
+	&& sed -i 's/demo\.launch(share=True)/demo.launch(server_name="0.0.0.0", server_port=8080)/' gradio_gui.py \
 	&& chown --recursive ${UID}:${UID} /app \
 	&& addgroup --gid ${UID} piper \
 	&& adduser --ingroup piper --uid ${UID} --disabled-password --system --home /app piper
 
 USER piper
-WORKDIR /app
-RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tts.git . \
-	&& sed -i 's/demo\.launch(share=True)/demo.launch(server_name="0.0.0.0", server_port=8080)/' gradio_gui.py
-
 EXPOSE 8080
 CMD ["python", "gradio_gui.py"]
