--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -1,28 +1,24 @@
-FROM docker.io/library/python:3.10-slim
+FROM docker.io/opensuse/tumbleweed:latest
 ARG UID=200011
-ENV DEBIAN_FRONTEND=noninteractive
+RUN zypper -n update \
+	&& zypper -n install calibre ffmpeg git unzip python310 \
+	&& rm -rf /var/cache/zypp/*
 
-RUN printf 'APT::Install-Recommends "0";\nAPT::Install-Suggests "0";\nAPT::Acquire::Retries "20";\nAPT::Get::Assume-Yes "true";\nDpkg::Use-Pty "0";\nquiet "1";' > /etc/apt/apt.conf.d/99github \
-	&& apt-get update && apt-get upgrade && apt-get dist-upgrade \
-	&& apt-get install calibre ffmpeg git unzip \
-	&& rm -rf /var/cache/apt/*
-
-RUN pip install --no-cache-dir --upgrade pip \
-	&& pip install --no-cache-dir --prefer-binary spacy==3.7.5 piper-tts pydub nltk beautifulsoup4 ebooklib tqdm gradio \
-	&& python -m spacy download en_core_web_sm
+WORKDIR /app
+RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tts.git . \
+	&& sed -i 's/demo\.launch(share=True)/demo.launch(server_name="0.0.0.0", server_port=8080)/' gradio_gui.py \
+	&& useradd -u ${UID} -r -d /app -s /sbin/nologin piper \
+	&& chown --recursive piper:piper /app
 
 COPY nltk.zip /tmp
-RUN unzip -q "/tmp/nltk.zip" -d "/tmp" \
+RUN python3.10 -m ensurepip --upgrade \
+	&& pip3.10 install --upgrade pip \
+	&& pip3.10 install --no-cache-dir --no-cache-dir --prefer-binary spacy==3.7.5 piper-tts pydub nltk beautifulsoup4 ebooklib tqdm gradio \
+	&& python3.10 -m spacy download en_core_web_sm \
+	&& unzip -q "/tmp/nltk.zip" -d "/tmp" \
 	&& rm -rf "/usr/local/lib/python3.10/site-packages/nltk" \
 	&& mv "/tmp/nltk" "/usr/local/lib/python3.10/site-packages/nltk"
 
-WORKDIR /app
-RUN git clone --depth=1 https://github.com/DrewThomasson/ebook2audiobookpiper-tts.git . \
-	&& sed -i 's/demo\.launch(share=True)/demo.launch(server_name="0.0.0.0", server_port=8080)/' gradio_gui.py \
-	&& addgroup --gid ${UID} piper \
-	&& adduser --ingroup piper --uid ${UID} --disabled-password --system piper --home /app \
-	&& chown --recursive piper:piper /app
-
 USER piper
 EXPOSE 8080
-CMD ["python", "gradio_gui.py"]
+CMD ["python3.10", "gradio_gui.py"]
