--- a/.github/workflows/build-ebook2audiobookpiper.yml
+++ b/.github/workflows/build-ebook2audiobookpiper.yml
@@ -23,6 +23,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    timout-minutes: 70
     runs-on: ubuntu-24.04
 
     steps:
