--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker.io/opensuse/tumbleweed:latest
 ARG UID=200011
 RUN zypper -n update \
-	&& zypper -n install calibre ffmpeg git unzip python310 \
+	&& zypper -n install calibre ffmpeg git unzip python310 tini \
 	&& rm -rf /var/cache/zypp/*
 
 WORKDIR /app
@@ -11,8 +11,7 @@ RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tt
 	&& chown --recursive piper:piper /app
 
 COPY nltk.zip /tmp
-RUN python3.10 -m ensurepip --upgrade \
-	&& pip3.10 install --no-cache-dir --upgrade pip \
+RUN python3.10 -m ensurepip --upgrade && pip3.10 install --no-cache-dir --upgrade pip \
 	&& pip3.10 install --no-cache-dir --prefer-binary spacy==3.7.5 piper-tts pydub nltk beautifulsoup4 ebooklib tqdm gradio \
 	&& python3.10 -m spacy download en_core_web_sm \
 	&& unzip -q "/tmp/nltk.zip" -d "/tmp" \
@@ -21,4 +20,5 @@ RUN python3.10 -m ensurepip --upgrade \
 
 USER piper
 EXPOSE 8080
+ENTRYPOINT ["/sbin/tini", "--"]
 CMD ["python3.10", "gradio_gui.py"]
