Maybe unbuffered logs

--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -11,8 +11,7 @@ RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tt
 	&& chown --recursive piper:piper /app
 
 COPY nltk.zip /tmp
-RUN python3.10 -m ensurepip --upgrade \
-	&& pip3.10 install --no-cache-dir --upgrade pip \
+RUN python3.10 -m ensurepip --upgrade && pip3.10 install --no-cache-dir --upgrade pip \
 	&& pip3.10 install --no-cache-dir --prefer-binary spacy==3.7.5 piper-tts pydub nltk beautifulsoup4 ebooklib tqdm gradio \
 	&& python3.10 -m spacy download en_core_web_sm \
 	&& unzip -q "/tmp/nltk.zip" -d "/tmp" \
@@ -22,4 +21,4 @@ RUN python3.10 -m ensurepip --upgrade \
 USER piper
 EXPOSE 8080
 ENTRYPOINT ["/sbin/tini", "--"]
-CMD ["python3.10", "gradio_gui.py"]
+CMD ["python3.10", "-u", "gradio_gui.py"]
