Use environment variable instead

--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -11,7 +11,8 @@ RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tt
 	&& chown --recursive piper:piper /app
 
 COPY nltk.zip /tmp
-RUN python3.10 -m ensurepip --upgrade && pip3.10 install --no-cache-dir --upgrade pip \
+RUN python3.10 -m ensurepip --upgrade \
+	&& pip3.10 install --no-cache-dir --upgrade pip \
 	&& pip3.10 install --no-cache-dir --prefer-binary spacy==3.7.5 piper-tts pydub nltk beautifulsoup4 ebooklib tqdm gradio \
 	&& python3.10 -m spacy download en_core_web_sm \
 	&& unzip -q "/tmp/nltk.zip" -d "/tmp" \
@@ -19,6 +20,7 @@ RUN python3.10 -m ensurepip --upgrade && pip3.10 install --no-cache-dir --upgrad
 	&& mv "/tmp/nltk" "/usr/local/lib/python3.10/site-packages/nltk"
 
 USER piper
+ENV PYTHONUNBUFFERED=1
 EXPOSE 8080
 ENTRYPOINT ["/sbin/tini", "--"]
-CMD ["python3.10", "-u", "gradio_gui.py"]
+CMD ["python3.10", "gradio_gui.py"]
