Revert "Also add gid for eb2ab"
This reverts commit de3d05ba80a90a9f10c463ac3ae99cb175402290.

--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -6,7 +6,7 @@ RUN zypper -n update \
 
 WORKDIR /app
 RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tts.git . \
-	&& useradd -u ${UID} -g ${UID} -r -d /app -s /sbin/nologin piper \
+	&& useradd -u ${UID} -r -d /app -s /sbin/nologin piper \
 	&& chown --recursive piper:piper /app
 
 COPY nltk.zip /tmp
@@ -19,8 +19,8 @@ RUN python3.10 -m ensurepip --upgrade && pip3.10 install --no-cache-dir --upgrad
 
 USER piper
 ENV PYTHONUNBUFFERED=1 \
-	GRADIO_SHARE=False \
-	GRADIO_ANALYTICS_ENABLED=False \
+	GRADIO_SHARE="False" \
+	GRADIO_ANALYTICS_ENABLED="False" \
 	GRADIO_SERVER_NAME=0.0.0.0 \
 	GRADIO_SERVER_PORT=8080
 EXPOSE 8080
