--- a/Nitter/Dockerfile
+++ b/Nitter/Dockerfile
@@ -10,8 +10,8 @@ COPY --from=ghcr.io/sekai-soft/nitter-self-contained:latest /src/nitter/scripts/
 RUN pip install --no-cache-dir -r /tmp/requirements.txt --break-system-packages
 USER nitter
 COPY --chown=${UID}:${UID} --from=ghcr.io/sekai-soft/nitter-self-contained:latest /src/nitter/nitter /app/nitter
-COPY --chown=${UID}:${UID} --from=ghcr.io/sekai-soft/nitter-self-contained:latest /src/nitter/public /app/public
-COPY --chown=${UID}:${UID} --from=ghcr.io/sekai-soft/nitter-self-contained:latest /src/nitter/scripts/auth.py /app/auth.py
+COPY --chown=${UID}:${UID} --from=ghcr.io/sekai-soft/nitter-self-contained:latest /src/public /app/public
+COPY --chown=${UID}:${UID} --from=ghcr.io/sekai-soft/nitter-self-contained:latest /src/scripts/auth.py /app/auth.py
 COPY --chown=${UID}:${UID} ./nitter.conf.example /app/nitter.conf
 EXPOSE 8080
 ENTRYPOINT ["/sbin/tini", "--"]
