--- a/.github/workflows/deploy-uptime-kuma.yml
+++ b/.github/workflows/deploy-uptime-kuma.yml
@@ -8,6 +8,7 @@ on:
       - '.github/workflows/deploy-uptime-kuma.yml'
       - 'Uptime_Kuma/Dockerfile'
       - 'Uptime_Kuma/fly.toml'
+      - 'Uptime_Kuma/supervisord.conf'
   schedule:
     # Build the image weekly
     - cron: '15 0 * * 5'
