--- a/Uptime_Kuma/supervisord.conf
+++ b/Uptime_Kuma/supervisord.conf
@@ -25,7 +25,7 @@ stderr_logfile_maxbytes=0
 priority=20
 
 [program:tailscale]
-command=/bin/sh -c 'tailscaled --state=/app/data/tailscaled.state --socket=/var/run/tailscale/tailscaled.sock; tailscale up --auth-key="${TAILSCALE_AUTHKEY}" --hostname=uptime-kuma --ssh'
+command=/bin/sh -c 'tailscaled --state=/app/data/tailscaled.state --socket=/var/run/tailscale/tailscaled.sock; tailscale up --auth-key="${TAILSCALE_AUTHKEY}" --hostname=uptime-kuma'
 autostart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
