--- a/Uptime_Kuma/supervisord.conf
+++ b/Uptime_Kuma/supervisord.conf
@@ -24,6 +24,18 @@ stderr_logfile=/dev/fd/2
 stderr_logfile_maxbytes=0
 priority=20
 
+[program:junction]
+command=/app/junction
+environment=HOME="/home/node",USER="node"
+directory=/app/data
+autostart=true
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/fd/2
+stderr_logfile_maxbytes=0
+priority=30
+
 [program:tailscale]
 command=/bin/sh -c 'tailscaled --state=/app/data/tailscaled.state --socket=/var/run/tailscale/tailscaled.sock; tailscale up --auth-key="${TAILSCALE_AUTHKEY}" --hostname=uptime-kuma'
 autostart=true
@@ -31,4 +43,4 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
 stderr_logfile_maxbytes=0
-priority=30
+priority=40
