--- a/F-Droid/Dockerfile
+++ b/F-Droid/Dockerfile
@@ -1,8 +1,8 @@
 FROM ghcr.io/nginxinc/nginx-unprivileged:stable-bookworm
 USER root
 ARG VERSION=2.3.5
-ENV LANG=C.UTF-8 \
-	DEBIAN_FRONTEND=noninteractive
+ENV LANG=C.UTF-8
+ENV DEBIAN_FRONTEND=noninteractive
 RUN printf 'APT::Install-Recommends "0";\nAPT::Install-Suggests "0";\nAPT::Acquire::Retries "20";\nAPT::Get::Assume-Yes "true";\nDpkg::Use-Pty "0";\nquiet "1";' > /etc/apt/apt.conf.d/99github \
 	&& apt-get update && apt-get upgrade && apt-get dist-upgrade \
 	&& apt-get install apksigner git lzip openjdk-17-jdk-headless python3 python3-pip wget \
