--- a/Immich/Dockerfile
+++ b/Immich/Dockerfile
@@ -8,7 +8,9 @@ RUN curl -Lo /vectors.deb https://github.com/tensorchord/pgvecto.rs/releases/dow
 
 FROM docker.io/library/postgres:${POSTGRES}
 COPY --from=0 /vectors.deb /tmp/vectors.deb
+RUN apt-get update && apt-get upgrade -y && apt-get dist-upgrade -y
 RUN apt-get install -y /tmp/vectors.deb && rm -f /tmp/vectors.deb && rm -rf /var/cache/apt/* && rm -f /usr/local/bin/gosu
 RUN usermod -u 26 postgres
+
 USER 26
 CMD ["postgres", "-c", "shared_preload_libraries=vectors.so", "-c", "search_path=\"$user\", public, vectors", "-c", "logging_collector=on", "-c", "max_wal_size=2GB", "-c", "shared_buffers=512MB", "-c", "wal_compression=on"]
