Added more env examples

--- a/Linkwarden/.env.example
+++ b/Linkwarden/.env.example
@@ -1,6 +1,6 @@
-POSTGRES_USER=
+POSTGRES_USER=lw
 NEXTAUTH_URL=
-NEXT_PUBLIC_GOOGLE_ENABLED=
+NEXT_PUBLIC_GOOGLE_ENABLED=true
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 NEXTAUTH_SECRET=
